[package]
name = "trading-ig"
version = "0.1.0"
edition = "2021"
authors = ["Trading IG Rust Team"]
description = "Rust implementation of trading_ig - IG Markets trading library with real-time streaming support"
license = "MIT"
repository = "https://github.com/trading-ig/trading-ig"
keywords = ["ig", "trading", "finance", "lightstreamer", "streaming"]
categories = ["finance", "api-bindings"]

[[example]]
name = "basic_usage"
path = "../examples/basic_usage.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }

# Local dependencies
lightstreamer-client = { path = "../lightstreamer-client" }

# IG-specific dependencies
rust_decimal = "1.34"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
uuid = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
dotenv = { workspace = true } 