[package]
name = "trading-ig"
version = "0.1.0"
edition = "2021"
authors = ["Trading IG Rust Team"]
description = "Rust implementation of trading_ig - IG Markets trading library with real-time streaming support"
license = "MIT"
repository = "https://github.com/trading-ig/trading-ig"
keywords = ["ig", "trading", "finance", "lightstreamer", "streaming"]
categories = ["finance", "api-bindings"]

[[example]]
name = "basic_usage"
path = "../examples/basic_usage.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
dashmap = "5.5"
crossbeam = "0.8"

# Local dependencies
lightstreamer-client = { path = "../lightstreamer-client" }

# IG-specific dependencies
rust_decimal = "1.34"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
env_logger = "0.10"
dotenv = "0.15" 